<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_update"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/cp_add_contact_name"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etUpdateName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:hint="@string/cp_name_hint"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/cp_add_contact_phone"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etUpdatePhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:hint="@string/cp_phone_hint"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Switch
        android:id="@+id/sUpdateIsGpsOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact receives GPS info"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnUpdateContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_btn_update"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/btnCancelContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_btn_cancel"
            android:textColor="@color/red"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>