<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:Context=".HomeFragment">

    <ImageView
        android:id="@+id/ivProgress"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/good_job1" />
    <TextView
        android:id="@+id/tvMainProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/mp_progress20"
        android:textSize="40sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDetailProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="You are only 50% safe"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <CheckBox
            android:id="@+id/cbGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/mp_gps_on" />
        <CheckBox
            android:id="@+id/cbContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/mp_contacts_set" />
        <CheckBox
            android:id="@+id/cbGetGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/mp_receive_gps"/>

        <CheckBox
            android:id="@+id/cbDefaultMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/mp_default_message_set" />
    </LinearLayout>

    <Button
        android:id="@+id/btnToTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hp_start_record"
        android:background="@color/teal_200"
        android:layout_margin="10dp"/>

</LinearLayout>