<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragments.ContactsFragment">

        <RelativeLayout
            android:id="@+id/rlContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/cp_name_hint" />


            <EditText
                android:id="@+id/etPhone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/cp_phone_hint"
                android:inputType="phone"
                android:maxLength="11" />
        </RelativeLayout>

        <Switch
            android:id="@+id/sIsGpsOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlContact"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="Contact receives GPS info"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAddContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sIsGpsOn"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/teal_200"
            android:src="@drawable/ic_add"
            android:text="@string/cp_btn_add_contact" />

        <TextView
            android:id="@+id/tvNoRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAddContact"
            android:layout_centerHorizontal="true"
            android:text="@string/cp_tv_no_records"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvContact"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/tvNoRecords"></androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvContact"
            android:layout_marginTop="40dp"
            android:text="@string/cp_tv_def_message"
            android:textColor="@color/black" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnInfoMessage"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvContact"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/teal_200"
            android:src="@drawable/ic_info"
            app:elevation="0dp"
            app:fabCustomSize="20dp"
            app:maxImageSize="24dp" />

        <EditText
            android:id="@+id/etDefaultMessage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/tvMessage"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/cp_et_message_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSaveDefaultMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDefaultMessage"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/teal_200"
            android:src="@drawable/ic_add"
            android:text="@string/cp_btn_save_message" />
    </RelativeLayout>
</ScrollView>
